styling changes and adding responsivity

--- a/client/src/app/TodoItems/progress-bar/progress-bar.component.html
+++ b/client/src/app/TodoItems/progress-bar/progress-bar.component.html
@@ -19,6 +19,6 @@
       ></ngb-progressbar>
     </ng-template>
 
-    <ng-template #noTasks> There are no tasks </ng-template>
+    <ng-template #noTasks> There are no Tasks </ng-template>
   </div>
 </div>
