--- a/client/src/app/TodoItems/todo-items-add/todo-items-add.component.scss
+++ b/client/src/app/TodoItems/todo-items-add/todo-items-add.component.scss
@@ -10,12 +10,20 @@ form {
   flex-direction: row;
   justify-content: center;
   margin-top: 1em;
+
+  .inputs-inner {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+.form-inputs :nth-child(2) {
+  margin: 0 0.2em 0 0.1em;
 }
 
 .btn-add {
   display: inline-block;
   padding: 15px;
-  margin-right: 5px;
   height: 50px;
   min-width: 100px;
   background: $button-bg-color;
@@ -42,6 +50,11 @@ form {
     box-shadow: none;
   }
 }
-app-text-area {
-  margin: 0 0.4em;
+
+@media screen and (max-width: 1050px) {
+  .form-inputs {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
