--- a/client/src/app/TodoItems/todo-items-list/todo-items-list.component.scss
+++ b/client/src/app/TodoItems/todo-items-list/todo-items-list.component.scss
@@ -1,6 +1,7 @@
 .list-wrapper {
   background: #fff;
   text-align: center;
+  width: 100%;
 }
 
 .list-inner {
@@ -32,8 +33,8 @@
   max-height: 40em;
   overflow-y: auto;
   overflow: overlay;
-  padding-right: 1.4em;
-  margin-right: -1.4em;
+  padding-right: 0.8em;
+  margin-right: -0.8em;
 }
 
 .btn {
@@ -58,4 +59,102 @@
 
 ::ng-deep .mat-tab-labels {
   justify-content: right !important;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 9px;
+  margin-top: 5em;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #3d3d3d;
+}
+
+::-webkit-scrollbar-button:start:increment {
+  height: 9%;
+  background: #fff;
+}
+
+@media screen and (max-width: 830px) {
+  .user {
+    width: 15em;
+  }
+  ::ng-deep .mat-tab-labels {
+    justify-content: left !important;
+  }
+
+  .list-inner {
+    column-gap: 0.9em;
+  }
+
+  .list-tasks {
+    padding-right: 0.7em;
+    margin-right: -0.7em;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .user {
+    width: 100%;
+  }
+
+  ::ng-deep .mat-tab-labels {
+    justify-content: center !important;
+  }
+  .list-inner {
+    display: flex;
+    flex-direction: column;
+  }
+  .list-tasks {
+    border: none;
+    padding-right: 1em;
+    margin-right: -0.6em;
+  }
+
+  .user {
+    .task-buttons {
+      padding: 0 0 0.5em 0;
+      display: flex;
+      justify-content: center;
+    }
+    .btn {
+      width: 5em;
+      padding: 0.3em;
+      font-size: 1.1em;
+      margin-right: 0.2em;
+    }
+
+    .mr-1 {
+      margin-right: 0.2em !important;
+    }
+
+    .task-type {
+      margin-bottom: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .btn {
+    width: 4em !important;
+  }
+  .btn-info {
+    width: auto !important;
+  }
+
+  .list-tasks {
+    padding-right: 0;
+    margin-right: 0;
+  }
 }
