--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .app-root {
-  margin-top: 4em;
+  padding-top: 6em;
 }
 
 .app-wrapper {
@@ -10,4 +10,40 @@
   border-radius: 5em;
   padding: 0 1.8em;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+@media screen and (max-width: 1050px) {
+  .app-wrapper {
+    width: 55em;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .app-wrapper {
+    width: 42.2em;
+    padding: 0 1em;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .app-root {
+    padding-top: 4em;
+  }
+  .app-wrapper {
+    width: 34em;
+    height: 63em;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .app-wrapper {
+    width: 30em;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .app-wrapper {
+    width: 26em;
+    padding: 0;
+  }
 }
