--- a/client/src/app/_forms/text-area/text-area.component.scss
+++ b/client/src/app/_forms/text-area/text-area.component.scss
@@ -3,3 +3,8 @@ textarea {
   max-height: 3.6em;
   min-height: 2.4em;
 }
+@media screen and (max-width: 1050px) {
+  textarea {
+    width: 20.6em;
+  }
+}
