--- a/client/src/app/Home/home.component.html
+++ b/client/src/app/Home/home.component.html
@@ -1,6 +1,4 @@
 <div class="container">
   <h1>Welcome to To-Do App</h1>
-  <a *ngIf="!(accountService.currentUser$ | async)" routerLink="/register"
-    >Register here</a
-  >
+  <a routerLink="/register">Register here</a>
 </div>
