--- a/client/src/app/Home/home.component.html
+++ b/client/src/app/Home/home.component.html
@@ -1,4 +1,6 @@
 <div class="container">
   <h1>Welcome to To-Do App</h1>
-  <a routerLink="/register">Register here</a>
+  <a *ngIf="!(accountService.currentUser$ | async)" routerLink="/register"
+    >Register here</a
+  >
 </div>
